--- a/Parte1/css/style.css
+++ b/Parte1/css/style.css
@@ -1,1 +1,39 @@
- 
+body{
+    background-color: steelblue;
+}
+
+h1{
+    text-align: center;
+ }
+
+ h3{
+    text-align: center;
+ }
+
+ #quote{
+    text-align: center;
+    font-size: 15px;
+ }
+
+ img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: solid double;
+    border-width: 5px;
+ }
+
+ span{
+    font-weight: bold;
+ }
+
+ #dates{
+    display: flex;
+    flex-direction: column-reverse;
+ }
+
+ footer{
+    margin-top: 50px;
+    display: flex;
+    justify-content: flex-end;
+ }
